Added a "proffesional profile" field to the Join_US

--- a/trunk/lnx.milanin.com/egroupware/egroupware/sitemgr/setup/phpgw_en.lang
+++ b/trunk/lnx.milanin.com/egroupware/egroupware/sitemgr/setup/phpgw_en.lang
@@ -485,3 +485,12 @@ your comment	sitemgr	en	Your comment
 your email	sitemgr	en	Your E-mail address
 your name	sitemgr	en	Your Name
 your phone number	sitemgr	en	Your phone number
+Independant Professional	sitemgr	en	Independant Professional
+Which professional profile better describes you	sitemgr	en	Which professional profile better describes you
+Contract worker or employee	sitemgr	en	Contract worker or employee
+New business owner	sitemgr	en	New business owner
+Head Hunter	sitemgr	en	Head Hunter
+Student	sitemgr	en	Student
+Company	sitemgr	en	Company
+Foreign	sitemgr	en	Foreign
+Proffessional profile is required	sitemgr	en	Proffessional profile is required
