--- a/trunk/lnx.milanin.com/egroupware/egroupware/sitemgr/setup/phpgw_it.lang
+++ b/trunk/lnx.milanin.com/egroupware/egroupware/sitemgr/setup/phpgw_it.lang
@@ -44,3 +44,12 @@ you must fill in all of the required fields	sitemgr	it	Bisogna compilare tutti i
 your email	sitemgr	it	La tua E-Mail
 your name	sitemgr	it	Il tuo Nome
 your phone number	sitemgr	it	Il tuo numero telefonico
+Which professional profile better describes you	sitemgr	it	Il tuo profilo professionale
+Independant Professional	sitemgr	it	Libero professionista
+Contract worker or employee	sitemgr	it	Dipendente
+New business owner	sitemgr	it	Neo imprenditore
+Head Hunter	sitemgr	it	Head Hunter
+Student	sitemgr	it	Studente
+Company	sitemgr	it	Azienda
+Foreign	sitemgr	it	Straniero
+Proffessional profile is required	sitemgr	it	E' necessario selezionare il profilo professionale
