--- a/trunk/lnx.milanin.com/egroupware/egroupware/vanilla/setup/phpgw_it.lang
+++ b/trunk/lnx.milanin.com/egroupware/egroupware/vanilla/setup/phpgw_it.lang
@@ -2,5 +2,5 @@ profile	common	it	Profilo
 my profile	common	it	Mio Profilo
 view profile	profile	it	Mostra Profilo
 edit profile	profile	it	Modificare Profilo
-your profile is	profile	it	Il tuo Profilo Ã¨
+your profile is	profile	it	Il tuo Profilo è
 complete	profile	it	completo
