Added visualisation of "direct" anonymous visits

--- a/trunk/lnx.milanin.com/egroupware/egroupware/vanilla/setup/phpgw_en.lang
+++ b/trunk/lnx.milanin.com/egroupware/egroupware/vanilla/setup/phpgw_en.lang
@@ -18,3 +18,4 @@ view homepage	profile	en	View Homepage
 view weblog	profile	en	View Weblog
 edit homepage	profile	en	Design Homepage
 edit weblog	profile	en	Post to Weblog
+direct	profile	en	Direct
